<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/account"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/settings_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="centerCrop"
                    android:src="@drawable/no_image_available"
                    android:layout_margin="5dp"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/settings_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="#00000000"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_email_black_24dp"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="textWebEmailAddress"
                    tools:text="peraperic@gmail.com" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/settings_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="#00000000"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:inputType="textPersonName"
                    tools:text="Pera Peric" />

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/settings_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="#00000000"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_lock_black_24dp"
                    android:inputType="text"
                    tools:text="pera123" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/settings_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="#00000000"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_local_phone_black_24dp"
                    android:inputType="phone"
                    tools:text="06412312544" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/settings_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="#00000000"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_place"
                    android:inputType="text"
                    tools:text="Leskovac" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/ic_adb_black_24dp"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:text="Avatar" />

                    <ImageView
                        android:id="@+id/settings_avatar"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        tools:src="@drawable/avatar3"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="20dp"/>

                </RelativeLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:text="@string/application"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/serice_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/switch_service_status"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <android.support.v7.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/notification_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notifications"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <android.support.v7.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>


    </LinearLayout>
</ScrollView>